package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

public interface DataReader {
    String readData() throws IOException;
}
